a fix + some changes on style + don't allow "System" as username

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
 <body>
     <table id="messages">
-        <td class="username">System</td>
-        <td class="message">Welcome!</td>
+        <tbody>
+            <tr>
+                <td class="username">System</td>
+                <td class="message">Welcome!</td>
+            </tr>
+        </tbody>
     </table>
     <form id="form" action="">
         <input id="input" autocomplete="off" /><button>Send</button>
